fixed align issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23,3 +23,8 @@
 .help-block.text-danger {
   color: #ff0404!important;
 }
+
+/*CENTER IMAGES*/
+.img-responsive {
+    margin: 0 auto;
+}
